--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "bracketSameLine": true,
-    "printWidth": 80,
-    "trailingComma": "es5",
-    "semi": false
-  }
+   "bracketSameLine": true,
+   "printWidth": 80,
+   "semi": false,
+   "trailingComma": "es5",
+   "tabWidth": 3
+}
