--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "vite",
     "react",
     "prettier",
-    "eslint",
+    "eslint"
   ],
-  "scripts": {    
+  "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
@@ -27,11 +27,10 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "redux":"^4.1.2",
-    "react-redux":"^8.0.8",
-    "@reduxjs/toolkit":"^1.8.1",
-    "webext-bridge":"^5.0.4"
-
+    "redux": "^4.1.2",
+    "react-redux": "^8.0.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "webext-bridge": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -40,17 +39,17 @@
     "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
-    "@testing-library/react-hooks":"^8.0.0",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/chrome": "0.0.181",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
-    "@types/react-router":"^5.1.18",
-    "@types/webextension-polyfill":"^0.8.3",
+    "@types/react-router": "^5.1.18",
+    "@types/webextension-polyfill": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",    
+    "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^1.3.1",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.13.0",
@@ -69,6 +68,6 @@
     "vite": "^2.9.5",
     "vite-plugin-checker": "^0.4.6",
     "vite-tsconfig-paths": "^3.4.1",
-    "webextension-polyfill":"^0.9.0"
+    "webextension-polyfill": "^0.9.0"
   }
 }
